language/move-lang/tests/move_check/typing/borrow_field_chain_missing.exp
error[E03010]: unbound field
  ┌─ tests/move_check/typing/borrow_field_chain_missing.move:7:10
  │
7 │         &x1.f;
  │          ^^^^ Unbound field 'f' in '0x8675309::M::X1'

error[E03010]: unbound field
  ┌─ tests/move_check/typing/borrow_field_chain_missing.move:8:10
  │
8 │         &x1.x2.f;
  │          ^^^^^^^ Unbound field 'f' in '0x8675309::M::X2'

error[E03010]: unbound field
  ┌─ tests/move_check/typing/borrow_field_chain_missing.move:9:10
  │
9 │         &x1.x2.x3.g;
  │          ^^^^^^^^^^ Unbound field 'g' in '0x8675309::M::X3'

error[E03010]: unbound field
   ┌─ tests/move_check/typing/borrow_field_chain_missing.move:11:10
   │
11 │         &x1_mut.f;
   │          ^^^^^^^^ Unbound field 'f' in '0x8675309::M::X1'

error[E03010]: unbound field
   ┌─ tests/move_check/typing/borrow_field_chain_missing.move:12:10
   │
12 │         &x1_mut.x2.f;
   │          ^^^^^^^^^^^ Unbound field 'f' in '0x8675309::M::X2'

error[E03010]: unbound field
   ┌─ tests/move_check/typing/borrow_field_chain_missing.move:13:10
   │
13 │         &x1_mut.x2.x3.g;
   │          ^^^^^^^^^^^^^^ Unbound field 'g' in '0x8675309::M::X3'

error[E03010]: unbound field
   ┌─ tests/move_check/typing/borrow_field_chain_missing.move:15:14
   │
15 │         &mut x1_mut.f;
   │              ^^^^^^^^ Unbound field 'f' in '0x8675309::M::X1'

error[E03010]: unbound field
   ┌─ tests/move_check/typing/borrow_field_chain_missing.move:16:14
   │
16 │         &mut x1_mut.x2.f;
   │              ^^^^^^^^^^^ Unbound field 'f' in '0x8675309::M::X2'

error[E03010]: unbound field
   ┌─ tests/move_check/typing/borrow_field_chain_missing.move:17:14
   │
17 │         &mut x1_mut.x2.x3.g;
   │              ^^^^^^^^^^^^^^ Unbound field 'g' in '0x8675309::M::X3'

